--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>Things we love about you</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Lilita+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id="intro">Alex, a thing I love about you is...</div>
     <div id="thing"></div>
+    <div id="refresh">refresh for another thing</div>
+
     <script>
       $.get("things.txt", function(data) {
 
@@ -17,6 +21,17 @@
         var thing = things[index];
         document.getElementById("thing").innerHTML = '<p>' + thing + '</p>';
 
+      });
+
+      function randomColor(){
+        r = Math.floor(Math.random() * (256));
+        g = Math.floor(Math.random() * (256));
+        b = Math.floor(Math.random() * (256));
+        jQuery('body').css('background-color','rgb('+r+','+g+','+b+')');
+      }
+
+      jQuery(document).ready(function(){
+        randomColor();
       });
 
     </script>
